--- a/index.html
+++ b/index.html
@@ -3,238 +3,173 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AvantQuest | Roblox Development Group</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>AvantQuest - Roblox Development Group</title>
     <style>
-        html {
-            scroll-behavior: smooth;
-        }
-
         body {
             margin: 0;
-            font-family: 'Poppins', sans-serif;
-            background: #000;
+            font-family: Arial, sans-serif;
+            background: #1a1a1d;
             color: #fff;
             overflow-x: hidden;
         }
 
         header {
-            position: sticky;
+            position: fixed;
             top: 0;
-            background: rgba(0, 0, 0, 0.8);
-            padding: 10px 20px;
+            width: 100%;
+            background: rgba(26, 26, 29, 0.9);
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            padding: 10px 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
             z-index: 1000;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
 
         header h1 {
+            margin: 0;
             font-size: 24px;
-            font-weight: 600;
-            color: #fff;
+            color: #ff6f61;
         }
 
-        header nav {
+        nav {
             display: flex;
             gap: 15px;
         }
 
-        header nav a {
-            text-decoration: none;
+        nav a {
             color: #fff;
-            font-weight: 400;
+            text-decoration: none;
+            font-size: 18px;
             transition: color 0.3s;
         }
 
-        header nav a:hover {
-            color: #ff66cc;
+        nav a:hover {
+            color: #ff6f61;
         }
 
         section {
-            padding: 60px 20px;
-            text-align: center;
-            position: relative;
+            padding: 80px 20px;
         }
 
-        .hero {
+        #hero {
             height: 100vh;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
-            background: rgba(255, 255, 255, 0.9);
-            border-radius: 30px;
-            color: #000;
-            position: relative;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin: 40px auto;
-            max-width: 90%;
-            animation: floatIn 2s ease-in-out;
-        }
-
-        .hero h2 {
-            font-size: 3rem;
-            margin-bottom: 10px;
-            color: #fff;
-        }
-
-        .hero h2 span {
-            display: inline-block;
-            animation: floatLetter 2s ease-in-out infinite;
-            position: relative;
-        }
-
-        .hero p {
-            font-size: 1.2rem;
-            max-width: 800px;
-            margin: 0 auto;
-            color: #fff;
-        }
-
-        .clock {
-            width: 150px;
-            height: 150px;
-            border: 5px solid rgba(255, 255, 255, 0.7);
-            border-radius: 50%;
-            position: relative;
-            margin: 20px auto;
-            background: rgba(0, 0, 0, 0.8);
-            display: flex;
             justify-content: center;
-            align-items: center;
-        }
-
-        .clock .hand {
-            position: absolute;
-            width: 2px;
-            background: #fff;
-            transform-origin: bottom;
-            transform: translateY(-50%) rotate(90deg);
-            border-radius: 2px;
-        }
-
-        .clock .hour {
-            height: 40px;
-        }
-
-        .clock .minute {
-            height: 60px;
-        }
-
-        .clock .second {
-            height: 70px;
-            background: #ff66cc;
-        }
-
-        .clock .numerals {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-            font-size: 1rem;
-        }
-
-        footer {
-            background: rgba(0, 0, 0, 0.9);
+            background: linear-gradient(135deg, #ff6f61, #1a1a1d);
             text-align: center;
-            padding: 20px 0;
-            font-size: 0.9rem;
-            color: #aaa;
         }
 
-        @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
+        #hero h2 {
+            font-size: 48px;
+            margin-bottom: 10px;
+            animation: floatIn 1.5s ease;
+        }
+
+        #hero p {
+            font-size: 20px;
+            max-width: 600px;
+            margin: 0 auto;
+            color: rgba(255, 255, 255, 0.8);
         }
 
         @keyframes floatIn {
-            0% { transform: translateY(-30px); opacity: 0; }
-            100% { transform: translateY(0); opacity: 1; }
+            from {
+                transform: translateY(-50px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
         }
 
-        @keyframes floatLetter {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
+        .content {
+            background: #252527;
+            padding: 40px;
+            margin: 20px 0;
+            border-radius: 10px;
+            position: relative;
         }
 
-        @media (max-width: 768px) {
-            .hero h2 {
-                font-size: 2rem;
-            }
+        .content::before {
+            content: "";
+            position: absolute;
+            top: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 150%;
+            height: 150%;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.2), transparent);
+            z-index: -1;
+            border-radius: 50%;
+            animation: glow 3s infinite;
+        }
 
-            .hero p {
-                font-size: 1rem;
+        @keyframes glow {
+            0%, 100% {
+                opacity: 0.4;
             }
+            50% {
+                opacity: 1;
+            }
+        }
+
+        .scroll {
+            scroll-behavior: smooth;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #1a1a1d;
+            color: #aaa;
+        }
+
+        footer a {
+            color: #ff6f61;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
-    <script>
-        function updateClockHands() {
-            const now = new Date();
-            const hours = now.getHours() % 12;
-            const minutes = now.getMinutes();
-            const seconds = now.getSeconds();
-
-            const hourDeg = (360 / 12) * hours + (30 / 60) * minutes;
-            const minuteDeg = (360 / 60) * minutes + (6 / 60) * seconds;
-            const secondDeg = (360 / 60) * seconds;
-
-            document.querySelector('.hand.hour').style.transform = `translateY(-50%) rotate(${hourDeg}deg)`;
-            document.querySelector('.hand.minute').style.transform = `translateY(-50%) rotate(${minuteDeg}deg)`;
-            document.querySelector('.hand.second').style.transform = `translateY(-50%) rotate(${secondDeg}deg)`;
-        }
-
-        setInterval(updateClockHands, 1000);
-        window.onload = updateClockHands;
-    </script>
 </head>
-<body>
+<body class="scroll">
     <header>
         <h1>AvantQuest</h1>
         <nav>
-            <a href="#about">About Us</a>
+            <a href="#hero">Home</a>
+            <a href="#about">About</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
 
-    <section class="hero">
-        <div class="clock">
-            <div class="hand hour"></div>
-            <div class="hand minute"></div>
-            <div class="hand second"></div>
-        </div>
-        <h2>
-            <span>W</span><span>e</span><span>l</span><span>c</span><span>o</span><span>m</span><span>e</span>
-            <span>t</span><span>o</span>
-            <span>A</span><span>v</span><span>a</span><span>n</span><span>t</span>
-            <span>Q</span><span>u</span><span>e</span><span>s</span><span>t</span>
-        </h2>
-        <p>We are a Roblox Development Group dedicated to creating immersive and engaging experiences for players. Our mission is to push the boundaries of creativity and technical innovation in the Roblox platform, delivering high-quality projects that captivate and inspire.</p>
+    <section id="hero">
+        <h2>Welcome to AvantQuest</h2>
+        <p>Your ultimate destination for Roblox development innovation and creativity.</p>
     </section>
 
     <section id="about" class="content">
-        <h3>About Us</h3>
-        <p>Avant Quest is a team of passionate developers and designers specializing in crafting unique Roblox experiences.</p>
+        <h2>About Us</h2>
+        <p>AvantQuest is a dedicated Roblox development group aiming to bring unique and engaging experiences to the platform. We specialize in game design, scripting, and more.</p>
     </section>
 
     <section id="projects" class="content">
-        <h3>Our Projects</h3>
-        <p>Avant Quest has worked on numerous projects that showcase our creativity and technical expertise. From game development to intricate scripting, we deliver unique experiences that captivate players worldwide.</p>
+        <h2>Our Projects</h2>
+        <p>Check out some of our latest and greatest projects, ranging from immersive role-playing games to innovative simulators.</p>
     </section>
 
     <section id="contact" class="content">
-        <h3>Contact Us</h3>
-        <p>Have a question or want to collaborate with us? Reach out via email at <a href="mailto:info@avantquest.com" style="color: #ff66cc;">info@avantquest.com</a> or join us on our social media channels!</p>
+        <h2>Contact Us</h2>
+        <p>Have questions or want to collaborate? Reach out to us at <a href="mailto:contact@avantquest.com">contact@avantquest.com</a>.</p>
     </section>
 
     <footer>
-        &copy;        2024 AvantQuest. All Rights Reserved.
+        <p>&copy; 2024 AvantQuest. Built with passion by our development team.</p>
     </footer>
 </body>
 </html>
