--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
         section {
             padding: 80px 20px;
+            position: relative;
         }
 
         #hero {
@@ -91,19 +92,20 @@
             margin: 20px 0;
             border-radius: 10px;
             position: relative;
+            overflow: hidden;
         }
 
         .content::before {
             content: "";
             position: absolute;
-            top: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 150%;
-            height: 150%;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background: radial-gradient(circle, rgba(255, 255, 255, 0.2), transparent);
-            z-index: -1;
-            border-radius: 50%;
+            z-index: 1;
+            pointer-events: none;
+            border-radius: 10px;
             animation: glow 3s infinite;
         }
 
@@ -114,6 +116,11 @@
             50% {
                 opacity: 1;
             }
+        }
+
+        .content h2, .content p {
+            position: relative;
+            z-index: 2;
         }
 
         .scroll {
@@ -134,6 +141,43 @@
 
         footer a:hover {
             text-decoration: underline;
+        }
+
+        @media (max-width: 768px) {
+            header {
+                flex-direction: column;
+                align-items: center;
+                padding: 10px;
+            }
+
+            nav {
+                flex-wrap: wrap;
+                gap: 10px;
+            }
+
+            #hero h2 {
+                font-size: 36px;
+            }
+
+            #hero p {
+                font-size: 16px;
+            }
+
+            .content {
+                padding: 20px;
+            }
+
+            .content h2 {
+                font-size: 24px;
+            }
+
+            .content p {
+                font-size: 14px;
+            }
+
+            footer {
+                font-size: 14px;
+            }
         }
     </style>
 </head>
