--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background: #1a1a1d;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to bottom, #1a1a1d, #0f0f10);
             color: #fff;
             overflow-x: hidden;
         }
@@ -17,29 +17,31 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background: rgba(26, 26, 29, 0.9);
+            background: rgba(26, 26, 29, 0.95);
             display: flex;
             justify-content: space-between;
-            padding: 10px 20px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+            align-items: center;
+            padding: 15px 30px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
             z-index: 1000;
         }
 
         header h1 {
+            font-size: 28px;
             margin: 0;
-            font-size: 24px;
             color: #ff6f61;
         }
 
         nav {
             display: flex;
-            gap: 15px;
+            gap: 20px;
         }
 
         nav a {
             color: #fff;
             text-decoration: none;
             font-size: 18px;
+            font-weight: 600;
             transition: color 0.3s;
         }
 
@@ -48,7 +50,7 @@
         }
 
         section {
-            padding: 80px 20px;
+            padding: 100px 20px;
             position: relative;
         }
 
@@ -60,11 +62,12 @@
             justify-content: center;
             background: linear-gradient(135deg, #ff6f61, #1a1a1d);
             text-align: center;
+            overflow: hidden;
         }
 
         #hero h2 {
             font-size: 48px;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
             animation: floatIn 1.5s ease;
         }
 
@@ -87,10 +90,10 @@
         }
 
         .content {
-            background: #252527;
-            padding: 40px;
+            background: rgba(37, 37, 39, 0.9);
+            padding: 50px;
             margin: 20px 0;
-            border-radius: 10px;
+            border-radius: 15px;
             position: relative;
             overflow: hidden;
         }
@@ -98,23 +101,21 @@
         .content::before {
             content: "";
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
             background: radial-gradient(circle, rgba(255, 255, 255, 0.2), transparent);
             z-index: 1;
-            pointer-events: none;
-            border-radius: 10px;
-            animation: glow 3s infinite;
+            animation: spin 8s linear infinite;
         }
 
-        @keyframes glow {
-            0%, 100% {
-                opacity: 0.4;
+        @keyframes spin {
+            from {
+                transform: rotate(0deg);
             }
-            50% {
-                opacity: 1;
+            to {
+                transform: rotate(360deg);
             }
         }
 
@@ -142,6 +143,7 @@
             padding: 20px;
             background: #1a1a1d;
             color: #aaa;
+            margin-top: 40px;
         }
 
         footer a {
@@ -174,7 +176,7 @@
             }
 
             .content {
-                padding: 20px;
+                padding: 30px;
             }
 
             .content h2 {
