--- a/index.html
+++ b/index.html
@@ -296,10 +296,16 @@
         <p>From immersive games to custom tools, AvantQuest delivers top-notch projects that captivate players and developers alike.</p>
     </section>
 
+       id="projects" class="content">
+        <div class="overlay"></div>
+        <h2>Our Projects</h2>
+        <p>From immersive games to powerful tools, AvantQuest delivers top-notch experiences for the Roblox community.</p>
+    </section>
+
     <section id="contact" class="content">
         <div class="overlay"></div>
         <h2>Contact Us</h2>
-        <p>Got questions or want to collaborate? Reach out to us via our social media platforms or email us at contact@avantquest.com.</p>
+        <p>Got questions or want to collaborate? Reach out via social media or email us at contact@avantquest.com.</p>
     </section>
 
     <footer>
