--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
         body {
             margin: 0;
             font-family: 'Roboto', sans-serif;
-            background: linear-gradient(to bottom, #1e293b, #0f172a);
-            color: #fff;
+            background: linear-gradient(to bottom, #f8fafc, #e2e8f0);
+            color: #1e293b;
         }
 
         header {
-            background: #0f172a;
+            background: #e2e8f0;
             padding: 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-bottom: 3px solid #38bdf8;
+            border-bottom: 3px solid #3b82f6;
         }
 
         header .logo {
             font-family: 'Playfair Display', serif;
             font-size: 2rem;
-            color: #38bdf8;
+            color: #3b82f6;
         }
 
         header nav a {
-            color: #fff;
+            color: #1e293b;
             margin: 0 15px;
             text-decoration: none;
             font-size: 1.2rem;
         }
 
         header nav a:hover {
-            color: #38bdf8;
+            color: #3b82f6;
         }
 
         .hero {
@@ -46,15 +46,15 @@
             justify-content: center;
             align-items: center;
             height: 90vh;
-            background: url('https://example.com/roblox-banner.jpg') center/cover no-repeat;
+            background: url('https://example.com/roblox-banner-light.jpg') center/cover no-repeat;
             text-align: center;
-            color: #fff;
+            color: #1e293b;
         }
 
         .hero h1 {
             font-size: 3rem;
             margin-bottom: 20px;
-            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
+            text-shadow: 2px 2px 8px rgba(255, 255, 255, 0.8);
         }
 
         .hero p {
@@ -63,7 +63,7 @@
         }
 
         .hero a {
-            background: #38bdf8;
+            background: #3b82f6;
             color: #fff;
             padding: 15px 30px;
             text-decoration: none;
@@ -72,12 +72,12 @@
         }
 
         .hero a:hover {
-            background: #0ea5e9;
+            background: #2563eb;
         }
 
         .services {
             padding: 50px 20px;
-            background: #0f172a;
+            background: #f1f5f9;
         }
 
         .services h2 {
@@ -85,6 +85,7 @@
             margin-bottom: 30px;
             font-family: 'Playfair Display', serif;
             font-size: 2.5rem;
+            color: #1e293b;
         }
 
         .services .cards {
@@ -94,37 +95,38 @@
         }
 
         .services .card {
-            background: #1e293b;
+            background: #ffffff;
             border-radius: 10px;
             padding: 20px;
             text-align: center;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
 
         .services .card h3 {
             margin-bottom: 15px;
             font-size: 1.8rem;
-            color: #38bdf8;
+            color: #3b82f6;
         }
 
         .services .card p {
             font-size: 1rem;
+            color: #475569;
         }
 
         .footer {
-            background: #0f172a;
+            background: #e2e8f0;
             text-align: center;
             padding: 20px;
-            color: #94a3b8;
+            color: #475569;
         }
 
         .footer a {
-            color: #38bdf8;
+            color: #3b82f6;
             text-decoration: none;
         }
 
         .footer a:hover {
-            color: #0ea5e9;
+            color: #2563eb;
         }
     </style>
 </head>
